# devhelpers

./: .buildinfo  .deepsource.toml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.md  README.md  devhelpers.html  dtools.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: codecov.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.md  2-feature_request.md  3-help.md  bug_report.md
.github/PULL_REQUEST_TEMPLATE/: Feature_Bugfix.md
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  release.yml
_modules/: index.html
_modules/devhelpers/: isatomic.html  nogc.html  timeit.html
_modules/dtools/: timeit.html
_sources/: devhelpers.rst.txt  dtools.rst.txt  index.rst.txt
devhelpers/: __init__.py  __version__.py  isatomic.py  isinvariant.py  nogc.py  package_version.py  profile.py  timeit.py
docs/source/: branching_model.rst  conf.py  devhelpers.rst  index.rst  installation.rst  license_short.rst  preface.rst
docs/source/contributer_documentation/: coc.rst  index.rst  tests_tools.rst  tools.rst
dtools/: __init__.py  __version__.py  timeit.py
news/: 53.misc  57.misc
tests/: __init__.py  test_package_meta.py
tests/devhelpers/: test_isatomic.py  test_isinvariant.py  test_nogc.py  test_timeit.py
tests/dtools/: __init__.py  test_timeit.py
