# devhelpers - A Development Toolbox
# Copyright (C) 2021  Michael Sasser <Michael@MichaelSasser.org>

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[tool.poetry]
name = "devhelpers"
version = "0.1.0"
description = "A Development Toolbox"
license = "GPL-3.0-or-later"
authors = ["Michael Sasser <Michael@MichaelSasser.org>"]
maintainers = ["Michael Sasser <Michael@MichaelSasser.org>"]
readme = "README.md"
repository = "https://github.com/MichaelSasser/devhelpers"
homepage = "https://github.com/MichaelSasser/devhelpers"
documentation = "https://github.com/MichaelSasser/devhelpers"
keywords = ['devtools', 'development', 'tools']
# Look here for all Classifiers:
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    # 'Development Status :: 3 - Alpha',
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[tool.poetry.dependencies]
python = "^3.9"

# Docs
sphinx-autodoc-typehints = { version = "^1.11.1", optional = true }
Sphinx = { version = "^3.5.1", optional = true }
numpydoc = { version = "^1.1.0", optional = true }
mypy = "^0.800"
black = "^20.8b1"

[tool.poetry.extras]
# Docs
docs = ["sphinx", "sphinx-autodoc-typehints", "numpydoc"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-instafail = "^0.4.2"
pytest-xdist = { version = "^2.2.1", extras = ["psutil"] }
flake8 = "^3.8.4"
neovim = "^0.3.1"
pydocstyle = "^5.1.1"
pylint = "^2.6.2"
pycodestyle = "^2.6.0"
yapf = "^0.30.0"
vulture = "^2.3"
mypy = "^0.800.0"
isort = "^5.7.0"
python-language-server = { version = "^0.36.2", extras = ["all"] }
black = { version = "*", allow-prereleases = true }


[tool.black]
line-length = 79
include = '\.pyi?$'
# exclude __init__.py because of ordered importing
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.flake8]
max-line-length = 79
# max-complexity = 12
ignore = "E501"
select = "C,E,F,W,B,B901"

[tool.isort]
line_length = 79
force_single_line = true
atomic = true
float_to_top = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
skip_glob = ["*/setup.py", "*.rst", "*.md", "*.yaml", "*.txt", "*.yml", "*.lock", "*.toml", "*.ini", "Makefile"]
filter_files = true
known_first_party = "ds2000"
known_third_party = [
    "pytest",
    "sphinx_rtd_theme",
]

[tool.vulture]
make_whitelist = true
min_confidence = 80
paths = ["devhelpers"]
sort_by_size = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
